# hw-prod-ml-1

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
logs/: metric_log.csv
src/: constants.py  enums.py  schemas.py  settings.py
src/apps/: dashboard.py  features.py  metric.py  model.py
