[tool.poetry]
name = "hw-prod-ml-1"
version = "0.1.0"
description = ""
authors = ["chumakov-md <chumakov-md@zvuk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
faststream = {extras = ["rabbit"], version = "^0.5.32"}
pandas = "^2.2.3"
plotly = "^5.24.1"
scikit-learn = "^1.6.0"
loguru = "^0.7.2"
orjson = "^3.10.12"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
dash-bootstrap-templates = "^1.3.0"
kaleido = "1.0.0rc0"
pydantic-settings = "^2.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
